2003-09-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-host-utils.c (g_gethostbyaddr_r): IPv6
	implementation rewritten to use getnameinfo() which is the proper
	function to use in this case.

	* gmime/internet-address.c (internet_address_list_length): Changed
	to take a const argument.
	(internet_address_to_string): Now takes a const InternetAddress.
	(internet_address_list_to_string): Now takes a const
	InternetAddressList.

2003-09-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream.c (g_mime_stream_read): If len == 0, return 0.
	(g_mime_stream_write): Same.

	* gmime/gmime-parser.c (parser_push_boundary): Fix the
	boundarylenfinal calculation. Thanks to Bart Visscher for catching
	this mistake.

2003-08-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/md5-utils.c (md5_get_digest_from_file): Open in binary
	mode, fixes a bug when built on Win32 systems.

2003-08-09  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Bumped to version 2.1.0

	* configure.in: Bumped to version 2.1.0

	* gmime/gmime-charset.c (g_mime_charset_name): Added back this
	symbol in order to avoid breaking ABI.
	(g_mime_charset_locale_name): Same.

	* gmime/gmime-utils.c (g_mime_utils_generate_message_id): Slight
	fix for growing the buffer used by g_gethostbyname_r().

2003-08-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime.h.in: Added new headers.

	* gmime/gmime-utils.c (g_mime_utils_generate_message_id): Use the
	re-entrant g_gethostbyname_r() function rather than
	gethostbyname() so that we are threadsafe.

	* gmime/gmime-host-utils.[c,h]: New source files containing
	gethostbyname_r() and gethostbyaddr_r() implementations.

	* gmime/gmime-filter-windows.[c,h]: New source files implementing
	a windows charset detection filter.

	* gmime/gmime-charset.c (g_mime_charset_iso_to_windows): New
	function to return the windows-cp125# equivalent charset for
	iso-8859-# charsets.

	* gmime/gmime-parser.c (parser_push_boundary): Soptimise a bit :-)