@@ -167,27 +167,34 @@ AC_TRY_RUN([
 CFLAGS="$CFLAGS_save"
 LIBS="$LIBS_save"
 
-dnl * Time zone stuff
-AC_CACHE_CHECK(for timezone variable, ac_cv_var_timezone,
+dnl Timezone checks
+AC_CACHE_CHECK(for tm_gmtoff in struct tm, ac_cv_struct_tm_gmtoff,
 	AC_TRY_COMPILE([
 		#include <time.h>
-		#include <sys/time.h>
-	], [
-		timezone = 1;
-	], ac_cv_var_timezone="yes", ac_cv_var_timezone="no"))
-if test "$ac_cv_var_timezone" = "yes"; then
-	AC_DEFINE(HAVE_TIMEZONE, 1, [Define to 1 if your system defines timezone in <time.h>.])
+		], [
+		struct tm tm;
+		tm.tm_gmtoff = 1;
+		], ac_cv_struct_tm_gmtoff="yes", ac_cv_struct_tm_gmtoff="no"))
+if test "$ac_cv_struct_tm_gmtoff" = "yes"; then
+	AC_DEFINE(HAVE_TM_GMTOFF, 1, [Define if struct tm has a tm_gmtoff member])
 else
-	AC_CACHE_CHECK(for tm_gmtoff in struct tm, ac_cv_struct_tm_gmtoff,
+	AC_CACHE_CHECK(for timezone variable, ac_cv_var_timezone,
 		AC_TRY_COMPILE([
 			#include <time.h>
-			#include <sys/time.h>
+		], [
+			timezone = 1;
+		], ac_cv_var_timezone="yes", ac_cv_var_timezone="no"))
+	if test "$ac_cv_var_timezone" = "yes"; then
+		AC_DEFINE(HAVE_TIMEZONE, 1, [Define if libc defines a timezone variable])
+		AC_CACHE_CHECK(for altzone variable, ac_cv_var_altzone,
+			AC_TRY_COMPILE([
+				#include <time.h>
 			], [
-			struct tm tm;
-			tm.tm_gmtoff = 1;
-			], ac_cv_struct_tm_gmtoff="yes", ac_cv_struct_tm_gmtoff="no"))
-	if test "$ac_cv_struct_tm_gmtoff" = "yes"; then
-		AC_DEFINE(HAVE_TM_GMTOFF, 1, [Define to 1 if you have struct tm.tm_gmtoff])
+				altzone = 1;
+			], ac_cv_var_altzone="yes", ac_cv_var_altzone="no"))
+		if test "$ac_cv_var_altzone" = "yes"; then
+			AC_DEFINE(HAVE_ALTZONE, 1, [Define if libc defines an altzone variable])
+		fi
 	else
 		AC_ERROR(unable to find a way to determine timezone)
 	fi
